[gd_scene load_steps=15 format=2]

[ext_resource path="res://Imagens/cenamenu.jpg" type="Texture" id=1]
[ext_resource path="res://cenamenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/RaviPrakash-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sons/cena_menu.wav" type="AudioStream" id=4]
[ext_resource path="res://Sons/selecionar_menu.wav" type="AudioStream" id=5]
[ext_resource path="res://Sons/menu-sfx-select-8-sound-effect-69717408.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_color = Color( 0.0823529, 0.454902, 0.0745098, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "FontMenu"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.886275 ), Color( 1, 1, 1, 0.196078 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "Entradamenu"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "SeleCarros"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "SeleCarros"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node2D" type="Node2D"]
scale = Vector2( 1.87795, 1.80397 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511.446, 299.425 )
scale = Vector2( 0.42602, 0.444183 )
texture = ExtResource( 1 )

[node name="Iniciar_Jogo" type="Button" parent="."]
margin_left = 40.4194
margin_top = 535.0
margin_right = 172.419
margin_bottom = 581.0
text = "Ir para pista"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ir_Instrucoes" type="Button" parent="."]
margin_left = 442.051
margin_top = 540.887
margin_right = 574.051
margin_bottom = 586.887
text = "Ver Instruções"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.886275 )
margin_left = 19.7892
margin_top = 25.3003
margin_right = 290.789
margin_bottom = 175.3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.14902, 0.654902, 0.0627451, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FontMenu"
anims/FontMenu = SubResource( 2 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 20.9492
margin_top = 424.984
margin_right = 180.95
margin_bottom = 477.984
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Dificuldade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 188.792
margin_top = 432.898
margin_right = 288.792
margin_bottom = 463.898
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelecionarPersonagem" type="Button" parent="."]
margin_left = 29.2553
margin_top = 171.54
margin_right = 166.255
margin_bottom = 219.54
text = "Selecionar Carro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerRanking" type="Button" parent="."]
margin_left = 27.6779
margin_top = 343.623
margin_right = 164.678
margin_bottom = 388.623
text = "Ver Ranking"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="."]
margin_left = 859.481
margin_top = 540.495
margin_right = 996.482
margin_bottom = 585.495
text = "Voltar ao login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelecionarPista" type="Button" parent="."]
margin_left = 27.7005
margin_top = 259.766
margin_right = 164.701
margin_bottom = 304.766
text = "Selecionar Pista"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomAmbiente" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -19.185

[node name="EntradaMenu" type="AnimationPlayer" parent="."]
anims/Entradamenu = SubResource( 4 )

[node name="AnimSeleCarros" type="AnimationPlayer" parent="."]
anims/SeleCarros = SubResource( 5 )

[node name="AnimSelepista" type="AnimationPlayer" parent="."]
anims/SeleCarros = SubResource( 6 )

[node name="AnimVerRank" type="AnimationPlayer" parent="."]
anims/SeleCarros = SubResource( 7 )
anims/VerRank = SubResource( 8 )

[node name="SelecionarMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.959

[node name="MouseEntrabotao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.194

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 408.0
margin_top = 257.0
margin_right = 842.0
margin_bottom = 406.0
window_title = "Atenção"
dialog_text = "Não foi selecionado a pista e/ou o carro, por favor selecione
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Iniciar_Jogo" to="." method="mouseentrainiciarjogo"]
[connection signal="pressed" from="Iniciar_Jogo" to="." method="iniciar_jogo"]
[connection signal="mouse_entered" from="Ir_Instrucoes" to="." method="mouseentrainstrucoes"]
[connection signal="pressed" from="Ir_Instrucoes" to="." method="ir_para_instrucoes"]
[connection signal="mouse_entered" from="OptionButton" to="." method="mouseentradificuldade"]
[connection signal="mouse_entered" from="SelecionarPersonagem" to="." method="Seleccarrobutomsom"]
[connection signal="pressed" from="SelecionarPersonagem" to="." method="selecionar_personagem"]
[connection signal="mouse_entered" from="VerRanking" to="." method="mouseentraranking"]
[connection signal="pressed" from="VerRanking" to="." method="ver_ranking"]
[connection signal="mouse_entered" from="Sair" to="." method="mouseentraranking"]
[connection signal="pressed" from="Sair" to="." method="Sair_jogo"]
[connection signal="mouse_entered" from="SelecionarPista" to="." method="mouseentrapista"]
[connection signal="pressed" from="SelecionarPista" to="." method="selecionar_pista"]
[connection signal="animation_finished" from="AnimSeleCarros" to="." method="anim_muda_cena_selectcarros"]
[connection signal="animation_finished" from="AnimSelepista" to="." method="anim_muda_cena_selectpista"]
[connection signal="animation_finished" from="AnimVerRank" to="." method="ir_para_ranking"]
